--- a/sat75.html
+++ b/sat75.html
@@ -159,7 +159,7 @@
         </figcaption>
       </figure>
       <p>
-        The mounting style of the Satisfaction 75 is known as a "sandwich"y
+        The mounting style of the Satisfaction 75 is known as a "sandwich"
         mount. This mounting style involves the plate of the keyboard being
         "sandwiched" between the top and bottom halves of the keyboard's
         housing, or case. This mounting style is a bit outdated by today's
