added ikki68 images

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <a href="bm65.html" class="grid__link">
               <img
                 class="grid__image"
-                src="imgs/keyboards/thumbnails/bm65_left_half.jpg"
+                src="imgs/keyboards/thumbnails/bm65_thumbnail.jpg"
                 alt="A picture of the BM65 keyboard"
               />
               <div class="grid__overlay">
@@ -270,7 +270,7 @@
             <a href="basketweave.html" class="grid__link">
               <img
                 class="grid__image"
-                src="imgs/keyboards/thumbnails/bw_right_half.jpg"
+                src="imgs/keyboards/thumbnails/bw_thumbnail.jpg"
                 alt="A picture of the Basketweave keyboard"
               />
               <div class="grid__overlay">
@@ -283,8 +283,8 @@
             <a href="index.html#keyboards" class="grid__link">
               <img
                 class="grid__image"
-                src="imgs/keyboards/thumbnails/coming_soon_rect_gray.png"
-                alt="A picture of the Basketweave keyboard"
+                src="imgs/keyboards/thumbnails/ikki68_thumbnail.jpg"
+                alt="A picture of the Ikki68 Aurora keyboard"
               />
               <div class="grid__overlay">
                 <span>Ikki68 Aurora</span>
@@ -297,7 +297,7 @@
               <img
                 class="grid__image"
                 src="imgs/keyboards/thumbnails/coming_soon_sq_gray.png"
-                alt="A picture of the Basketweave keyboard"
+                alt="A picture of the Freebird TKL keyboard"
               />
               <div class="grid__overlay">
                 <span>Freebird TKL</span>
@@ -310,7 +310,7 @@
               <img
                 class="grid__image"
                 src="imgs/keyboards/thumbnails/coming_soon_sq_gray.png"
-                alt="A picture of the Basketweave keyboard"
+                alt="A picture of the Clunker keyboard"
               />
               <div class="grid__overlay">
                 <span>Clunker</span>
