added ikki68 content and fixed styling / typos

--- a/basketweave.html
+++ b/basketweave.html
@@ -1,4 +1,3 @@
-<!-- THIS IS A TEMPLATE FOR ALL PAGES SEPARATE FROM INDEX -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -175,7 +174,7 @@
       <h2 style="margin-top: 60px">Build Specification</h2>
       <ul>
         <li><strong>Keycaps: </strong>21KB Red Cyrillic</li>
-        <li><strong>Switches: </strong>Alpaca V2's w/ Deskeys films</li>
+        <li><strong>Switches: </strong>JWK Alpaca V2's w/ Deskeys films</li>
         <li><strong>Plate: </strong>POM plate</li>
         <li>
           <strong>Stabilizers: </strong>Holee-modded Durock V2 stabilizers
