--- a/ikki68.html
+++ b/ikki68.html
@@ -1,11 +1,10 @@
-<!-- THIS IS A TEMPLATE FOR ALL PAGES SEPARATE FROM INDEX -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Item Page Title</title>
+    <title>My Keyboards: Ikki68 Aurora</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -21,6 +20,33 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- Favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="imgs/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="imgs/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="imgs/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="imgs/favicons/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="imgs/favicons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
 
     <!-- Fonts -->
     <link
@@ -40,7 +66,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html#home">
+        <a href="index.html#keyboards">
           <img
             src="imgs/logos/logo1_crop.png"
             alt="A picture of Jason Lee's logo"
@@ -76,37 +102,232 @@
     <!-- Introduction -->
     <section class="intro">
       <h1 class="section__title section__title--intro">
-        The title <strong>of my project</strong>
+        The <strong>Ikki68 Aurora</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
-      <img src="imgs/" alt="project image" class="intro__img" />
+      <p class="section__subtitle section__subtitle--intro">
+        Entry-level 65% with a badge
+      </p>
+      <img
+        src="imgs/keyboards/ikki68/ikki68_9009_intro.jpg"
+        alt="A close-up picture of the Ikki68 Aurora"
+        class="intro__img"
+      />
     </section>
 
     <div class="portfolio-item-individual">
+      <!-- Overview -->
+      <h2>Keyboard Overview</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Nullam eget felis
-        eget nunc lobortis mattis aliquam faucibus. Cursus euismod quis viverra
-        nibh. Sit amet nulla facilisi morbi tempus iaculis.
+        The Ikki68 Aurora is an exploded 65% keyboard manufactured by Wuque
+        Studio and sold by CannonKeys. The Ikki68 Aurora features an area for a
+        badge as an accent piece. Additionally, this area is magnetic in order
+        to remove and insert badges efficiently.
       </p>
+      <p>
+        A standard 65% keyboard features the arrow keys and omits the function
+        row. However, the layout of the Ikki68 Aurora is an "exploded" layout,
+        meaning that there is space between the arrow keys, right-most keys, and
+        the remaining keys. A unique aspect of the Ikki68 Aurora is that it
+        converts the standard right-most column of a 65% keyboard into a 2x2
+        cluster, making the keyboard resemble a simplified TKL layout.
+      </p>
+      <ul>
+        <li><strong>Groupbuy Price: </strong>$169</li>
+        <li>
+          <a
+            href="https://cannonkeys.com/products/ikki68-aurora-r2"
+            target="_blank"
+            >Product Page</a
+          >
+        </li>
+      </ul>
+      <!-- ikki68 layout -->
       <figure>
-        <img src="" alt="alt text" class="center__image" />
+        <img
+          src="imgs/keyboards/ikki68/ikki68_layout.png"
+          alt="A picture of the layout of the Ikki68 Aurora"
+          class="center__image"
+        />
         <figcaption class="caption">
-          <i> Caption text </i>
+          <i> The layout of the Ikki68 Aurora </i>
+        </figcaption>
+      </figure>
+      <!-- generic 65% layout -->
+      <figure>
+        <img
+          src="imgs/keyboards/ikki68/generic_65_layout.png"
+          alt="A picture of the standard layout of a 65% keyboard"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i> The standard layout of a 65% keyboard </i>
+        </figcaption>
+      </figure>
+      <!-- tkl layout -->
+      <figure>
+        <img
+          src="imgs/keyboards/ikki68/generic_tkl_layout.png"
+          alt="A picture of the standard layout of a TKL (80%) keyboard"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i> The standard layout of a TKL (80%) keyboard </i>
         </figcaption>
       </figure>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Nullam eget felis
-        eget nunc lobortis mattis aliquam faucibus. Cursus euismod quis viverra
-        nibh. Sit amet nulla facilisi morbi tempus iaculis.
+        The Ikki68 Aurora comes with a carrying case, cable, and various
+        optional accessories to modify the sound and feel of the keyboard. These
+        accessories consist of foams and pads that can be inserted into various
+        regions of the keyboard. The goal of these foams is to promote a more
+        consistent sound profile at the cost of flexibility. These foams come in
+        two materials: silicone and poron. The main difference between these
+        materials is that silicone is pronounced, but stiff while poron is
+        softer, but less effective.
+      </p>
+      <figure>
+        <img
+          src="imgs/keyboards/ikki68/ikki68_contents1.jpg"
+          alt="A picture of the contents of the Ikki68 Aurora"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i> The contents of the Ikki68 Aurora </i>
+        </figcaption>
+      </figure>
+      <figure>
+        <img
+          src="imgs/keyboards/ikki68/ikki68_contents2.jpg"
+          alt="A picture of more contents of the Ikki68 Aurora"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i> The silicone dampeners and gaskets of the Ikki68 Aurora </i>
+        </figcaption>
+      </figure>
+      <p>
+        The mounting style of the Ikki68 Aurora is known as a "gasket" mount.
+        This mounting style involves the plate of the keyboard being held by
+        "gaskets" which close the gap between the plate and the keyboard's
+        housing, or case. Depending on the keyboard design, these gaskets can
+        either appear on the case, or on the plate itself. In the case of the
+        Ikki68 Aurora, the gaskets appear on the case. Similar to the
+        accessories, the Ikki68 comes with the option to use silicone or poron
+        as the gasket material.
+      </p>
+      <figure>
+        <img
+          src="imgs/keyboards/ikki68/ikki68_gasket_mount.png"
+          alt="A picture of the mounting style of the Ikki68 Aurora"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i
+            >The gasket-mount mounting style of the Ikki68 Aurora
+            <a
+              href="https://www.keyboard.university/200-courses/keyboard-mounting-styles-4lpp7"
+              target="_blank"
+              >(Source)</a
+            ></i
+          >
+        </figcaption>
+      </figure>
+      <figure>
+        <img
+          src="imgs/keyboards/ikki68/ikki68_gaskets.jpg"
+          alt="A picture of the gaskets of the Ikki68 Aurora"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i> The gaskets of the Ikki68 Aurora </i>
+        </figcaption>
+      </figure>
+      <p>
+        The PCB of the Ikki68 Aurora features "flex-cuts", which are cuts in the
+        PCB in order to increase the flexibility of the keyboard during use.
+        Additionally, the PCB is thinner with a thickness of 1.2T as opposed to
+        the standard 1.6T, further promoting flexibility.
+      </p>
+      <figure>
+        <img
+          src="imgs/keyboards/ikki68/ikki68_flex_cuts.jpg"
+          alt="A picture of the flex-cuts of the Ikki68 Aurora PCB"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i> The flex-cuts of the Ikki68 Aurora PCB </i>
+        </figcaption>
+      </figure>
+      <figure>
+        <video
+          src="imgs/keyboards/ikki68/ikki68_flex_demo.mp4"
+          controls
+          class="center__image project__video"
+        ></video>
+        <figcaption class="caption" style="margin-top: -40px">
+          The flexibility of the Ikki68 Aurora
+        </figcaption>
+      </figure>
+
+      <!-- Build specs -->
+      <h2 style="margin-top: 60px">Build Specification</h2>
+      <ul>
+        <li><strong>Keycaps: </strong>EnjoyPBT 9009</li>
+        <li><strong>Switches: </strong>Wuque Studio Aurora Clears</li>
+        <li><strong>Plate: </strong>Polycarbonate plate</li>
+        <li><strong>Stabilizers: </strong>TX stabilizers</li>
+        <li>
+          <strong>Foam(s): </strong>Poron plate foam, poron gaskets, PE foam, no
+          silicone case dampener, and stabilizer foam
+        </li>
+      </ul>
+      <p>
+        The PE foam is a thin sheet that is place between the top of the PCB and
+        the bottom of the switches. This foam modifies the sound of each
+        keypress to sound more higher pitched, which might not be preferable by
+        all users. I also decided to use a completely poron configuration in
+        order to promote a softer typing experience.
       </p>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Nullam eget felis
-        eget nunc lobortis mattis aliquam faucibus. Cursus euismod quis viverra
-        nibh. Sit amet nulla facilisi morbi tempus iaculis.
+        I omitted the silicone case dampener in order to fully utilize the
+        flexibility of the keyboard. My reasoning for this is that the case
+        dampener greatly reduces the space between the bottom the PCB and the
+        bottom half of the keyboard, eliminating most of its flexibility.
+        Additionally, the primary goal of the dampener in reducing the resonance
+        from the case is not an issue since the bottom half of the keyboard is
+        made entirely out of plastic.
       </p>
+      <figure>
+        <img
+          src="imgs/keyboards/ikki68/ikki68_config2.jpg"
+          alt="A picture of the configuration of the Ikki68 Aurora"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i>The configuration of the Ikki68 Aurora</i>
+        </figcaption>
+      </figure>
+
+      <!-- Review -->
+      <h2 style="margin-top: 60px">Personal Review</h2>
+      <p>
+        The Ikki68 Aurora is a keyboard that has premium features at a fraction
+        of the price of a premium keyboard, such as gaskets and flex-cuts. An
+        initial concern that I had with this keyboard was its tall front height
+        of 21mm leading to wrist strain with use. Fortunately, this has not been
+        as big of an issue as I expected. I attribute this to its great
+        flexibility, making the keyboard very comfortable to use.
+      </p>
+      <p>
+        The main criticism that people have with the Ikki68 Aurora is that it
+        feels cheap. This is due to the fact that its case consists of an
+        aluminum top half, but plastic bottom half compared to the fully
+        aluminum case of its alternatives. Personally, I am indifferent to this
+        issue as I appreciate the reduced weight and retail price of using a
+        plastic bottom half.
+      </p>
+
+      <!-- Gallery -->
+      <h2 style="margin-top: 60px">Gallery</h2>
     </div>
 
     <!-- Footer -->
