--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           </div>
           <!-- keyboard item 4 -->
           <div class="grid-item grid-item-4">
-            <a href="index.html#keyboards" class="grid__link">
+            <a href="ikki68.html" class="grid__link">
               <img
                 class="grid__image"
                 src="imgs/keyboards/thumbnails/ikki68_thumbnail.jpg"
