--- a/sat75.html
+++ b/sat75.html
@@ -1,4 +1,3 @@
-<!-- THIS IS A TEMPLATE FOR ALL PAGES SEPARATE FROM INDEX -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -253,7 +252,9 @@
       <h2 style="margin-top: 60px">Build Specification</h2>
       <ul>
         <li><strong>Keycaps: </strong>GMK Modern Dolch 2</li>
-        <li><strong>Switches: </strong>Epsilons w/ 60g TX long springs</li>
+        <li>
+          <strong>Switches: </strong>Prevail Key Epsilons w/ 60g TX long springs
+        </li>
         <li><strong>Plate: </strong>FR4 plate</li>
         <li><strong>Stabilizers: </strong>TX stabilizers</li>
         <li>
@@ -262,13 +263,13 @@
       </ul>
       <p>
         The PE foam is a thin sheet that is placed between the top of the PCB
-        and the bottom the the switches. This foam modifies the sound of each
-        keypress to sound more refined, which might not be preferable by all
-        users. I found that the sound of the PE foam is desirable, but can be
-        too loud at times. The case foam is a thicker sheet that is placed below
-        the PCB and dampens the resonance from the aluminum case, but heavily
-        reduces the flexibility of the keyboard. Since this keyboard uses a
-        sandwich mount, there is already minimal flexibility, making the
+        and the bottom of the switches. This foam modifies the sound of each
+        keypress to sound more higher pitched, which might not be preferable by
+        all users. I found that the sound of the PE foam is desirable, but can
+        be too loud at times. The case foam is a thicker sheet that is placed
+        below the PCB and dampens the resonance from the aluminum case, but
+        heavily reduces the flexibility of the keyboard. Since this keyboard
+        uses a sandwich mount, there is already minimal flexibility, making the
         consequences of case foam negligible.
       </p>
       <figure>
@@ -349,7 +350,7 @@
             <div class="gallery__img">
               <img
                 class="grid__image"
-                src="imgs/keyboards/satisfaction75/sat75_wob.jpg"
+                src="imgs/keyboards/satisfaction75/sat75_sc_top.jpg"
                 alt="A picture of the Satisfaction 75 keyboard"
               />
             </div>
