added ikki68 gallery

--- a/ikki68.html
+++ b/ikki68.html
@@ -310,11 +310,11 @@
       <!-- Review -->
       <h2 style="margin-top: 60px">Personal Review</h2>
       <p>
-        The Ikki68 Aurora is a keyboard that has premium features at a fraction
-        of the price of a premium keyboard, such as gaskets and flex-cuts. An
-        initial concern that I had with this keyboard was its tall front height
-        of 21mm leading to wrist strain with use. Fortunately, this has not been
-        as big of an issue as I expected. I attribute this to its great
+        The Ikki68 Aurora is a keyboard that has premium features, such as
+        gaskets and flex-cuts, at a fraction of the price of a premium keyboard.
+        An initial concern that I had with this keyboard was its tall front
+        height of 21mm leading to wrist strain with use. Fortunately, this has
+        not been as big of an issue as I expected. I attribute this to its great
         flexibility, making the keyboard very comfortable to use.
       </p>
       <p>
@@ -328,10 +328,82 @@
 
       <!-- Gallery -->
       <h2 style="margin-top: 60px">Gallery</h2>
+      <div class="ikki68-grid-container">
+        <!-- keyboard item 1 -->
+        <div class="ikki68-item-1">
+          <div class="gallery__img">
+            <img
+              class="grid__image"
+              src="imgs/keyboards/ikki68/ikki68_ivory_right_sq.jpg"
+              alt="A picture of the Ikki68 Aurora keyboard"
+            />
+          </div>
+        </div>
+        <!-- keyboard item 2 -->
+        <div class="ikki68-item-2">
+          <div class="gallery__img">
+            <img
+              class="grid__image"
+              src="imgs/keyboards/ikki68/ikki68_ivory_left.jpg"
+              alt="A picture of the Ikki68 Aurora keyboard"
+            />
+          </div>
+        </div>
+        <!-- keyboard item 3 -->
+        <div class="ikki68-item-3">
+          <div class="gallery__img">
+            <img
+              class="grid__image"
+              src="imgs/keyboards/ikki68/ikki68_9009_right.jpg"
+              alt="A picture of the Ikki68 Aurora keyboard"
+            />
+          </div>
+        </div>
+        <!-- keyboard item 4 -->
+        <div class="ikki68-item-4">
+          <div class="gallery__img">
+            <img
+              class="grid__image"
+              src="imgs/keyboards/ikki68/ikki68_caps_lock_sq.jpg"
+              alt="A picture of the Ikki68 Aurora keyboard"
+            />
+          </div>
+        </div>
+        <!-- keyboard item 5 -->
+        <div class="ikki68-item-5">
+          <div class="gallery__img">
+            <img
+              class="grid__image"
+              src="imgs/keyboards/ikki68/ikki68_camillo_right_sq.jpg"
+              alt="A picture of the Ikki68 Aurora keyboard"
+            />
+          </div>
+        </div>
+        <!-- keyboard item 6 -->
+        <div class="ikki68-item-6">
+          <div class="gallery__img">
+            <img
+              class="grid__image"
+              src="imgs/keyboards/ikki68/ikki68_camillo_left.jpg"
+              alt="A picture of the Ikki68 Aurora keyboard"
+            />
+          </div>
+        </div>
+        <!-- keyboard item 7 -->
+        <div class="ikki68-item-7">
+          <div class="gallery__img">
+            <img
+              class="grid__image"
+              src="imgs/keyboards/ikki68/ikki68_blue_cadet_top.jpg"
+              alt="A picture of the Ikki68 Aurora keyboard"
+            />
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer" style="margin-top: 60px">
       <a href="mailto:jaslee643@gmail.com" target="_blank" class="footer__link"
         >jaslee643@gmail.com</a
       >
