--- a/ikki68.html
+++ b/ikki68.html
@@ -283,9 +283,9 @@
       <p>
         The PE foam is a thin sheet that is place between the top of the PCB and
         the bottom of the switches. This foam modifies the sound of each
-        keypress to sound more higher pitched, which might not be preferable by
-        all users. I also decided to use a completely poron configuration in
-        order to promote a softer typing experience.
+        keypress to be higher pitched, which might not be preferable by all
+        users. I also decided to use a completely poron configuration in order
+        to promote a softer typing experience.
       </p>
       <p>
         I omitted the silicone case dampener in order to fully utilize the
