--- a/sat75.html
+++ b/sat75.html
@@ -264,12 +264,12 @@
       <p>
         The PE foam is a thin sheet that is placed between the top of the PCB
         and the bottom of the switches. This foam modifies the sound of each
-        keypress to sound more higher pitched, which might not be preferable by
-        all users. I found that the sound of the PE foam is desirable, but can
-        be too loud at times. The case foam is a thicker sheet that is placed
-        below the PCB and dampens the resonance from the aluminum case, but
-        heavily reduces the flexibility of the keyboard. Since this keyboard
-        uses a sandwich mount, there is already minimal flexibility, making the
+        keypress to be higher pitched, which might not be preferable by all
+        users. I found that the sound of the PE foam is desirable, but can be
+        too loud at times. The case foam is a thicker sheet that is placed below
+        the PCB and dampens the resonance from the aluminum case, but heavily
+        reduces the flexibility of the keyboard. Since this keyboard uses a
+        sandwich mount, there is already minimal flexibility, making the
         consequences of case foam negligible.
       </p>
       <figure>
