fixed clunker styling and changed accent color

--- a/basketweave.html
+++ b/basketweave.html
@@ -120,10 +120,10 @@
       <p>
         The Basketweave is an Alice keyboard with arrow keys and a knob
         manufactured by Clackery. The Alice layout is an ergonomic variation of
-        the 60/65% that splits the region of the keys in half and angles the
-        sections downward. The philosophy of this layout is that the angled
-        sections increase the distance between the user's wrists during use,
-        which reduces wrist strain.
+        the 60/65% keyboard that splits the region of the keys in half and
+        angles the sections downward. The philosophy of this layout is that the
+        angled sections increase the distance between the user's wrists during
+        use, which reduces wrist strain.
       </p>
       <ul>
         <li><strong>Groupbuy Price: </strong>$165</li>
@@ -135,6 +135,16 @@
           </a>
         </li>
       </ul>
+      <figure>
+        <img
+          src="imgs/keyboards/bm65/generic_65_layout.png"
+          alt="A picture of the layout of a 65% keyboard without a blocker"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i>The layout of a generic 65% keyboard</i>
+        </figcaption>
+      </figure>
       <figure>
         <img
           src="imgs/keyboards/basketweave/bw_layout_white_bg.png"
@@ -170,35 +180,6 @@
         </figcaption>
       </figure>
 
-      <!-- Build specs; start with the specs at the beginning -->
-      <h2 style="margin-top: 60px">Build Specification</h2>
-      <ul>
-        <li><strong>Keycaps: </strong>21KB Red Cyrillic</li>
-        <li><strong>Switches: </strong>JWK Alpaca V2's w/ Deskeys films</li>
-        <li><strong>Plate: </strong>POM plate</li>
-        <li>
-          <strong>Stabilizers: </strong>Holee-modded Durock V2 stabilizers
-        </li>
-        <li><strong>Foam(s): </strong>Plate foam (from Custom KBD)</li>
-      </ul>
-      <p>
-        The plate foam is a sheet that is placed between the top of the PCB and
-        the bottom of the plate. The purpose of this foam is to reduce the
-        reverb within the keyboard during use. However, this foam can reduce the
-        flexibility of the keyboard as well as the tone of each keypress. Since
-        this keyboard uses a sandwich mount, there is already minimal
-        flexibility, making the consequences of plate foam negligible.
-      </p>
-      <figure>
-        <img
-          src="imgs/keyboards/basketweave/bw_config.jpg"
-          alt="A picture of the Basketweave configuration"
-          class="center__image"
-        />
-        <figcaption class="caption">
-          <i>The configuration of the Basketweave</i>
-        </figcaption>
-      </figure>
       <p>
         The Basketweave is sold as a kit consisting of a blank PCB and various
         components that are to be soldered onto it. Custom mechanical keyboards
@@ -275,6 +256,37 @@
           <i>The back of the finished Basketweave PCB</i>
         </figcaption>
       </figure>
+
+      <!-- Build specs; start with the specs at the beginning -->
+      <h2 style="margin-top: 60px">Build Specification</h2>
+      <ul>
+        <li><strong>Keycaps: </strong>21KB Red Cyrillic</li>
+        <li><strong>Switches: </strong>JWK Alpaca V2's w/ Deskeys films</li>
+        <li><strong>Plate: </strong>POM plate</li>
+        <li>
+          <strong>Stabilizers: </strong>Holee-modded Durock V2 stabilizers
+        </li>
+        <li><strong>Foam(s): </strong>Plate foam (from Custom KBD)</li>
+      </ul>
+      <p>
+        The plate foam is a sheet that is placed between the top of the PCB and
+        the bottom of the plate. The purpose of this foam is to reduce the
+        reverb within the keyboard during use. However, this foam can reduce the
+        flexibility of the keyboard as well as the tone of each keypress. Since
+        this keyboard uses a sandwich mount, there is already minimal
+        flexibility, making the consequences of plate foam negligible.
+      </p>
+      <figure>
+        <img
+          src="imgs/keyboards/basketweave/bw_config.jpg"
+          alt="A picture of the Basketweave configuration"
+          class="center__image"
+        />
+        <figcaption class="caption">
+          <i>The configuration of the Basketweave</i>
+        </figcaption>
+      </figure>
+
       <p>
         The PCB has also been made "hotswappable" by soldering 0305 Mill-Max
         sockets in each of the switch sockets. This allows for switches to be
@@ -291,6 +303,7 @@
           <i>Mill-Maxing the Basketweave PCB with 0305 Mill-Max sockets</i>
         </figcaption>
       </figure>
+
       <!-- Personal Review -->
       <h2 style="margin-top: 60px">Personal Review</h2>
       <p>
