--- a/freebird.html
+++ b/freebird.html
@@ -140,7 +140,7 @@
           class="center__image"
         />
         <figcaption class="caption">
-          <i> The layout of the Freebird TKL </i>
+          <i> The layout of the Freebird TKL (F13) </i>
         </figcaption>
       </figure>
 
@@ -151,7 +151,7 @@
           class="center__image"
         />
         <figcaption class="caption">
-          <i> The layout of a generic TKL </i>
+          <i> The layout of a generic TKL (F12) </i>
         </figcaption>
       </figure>
 
