--- a/ikki68.html
+++ b/ikki68.html
@@ -121,7 +121,7 @@
         The Ikki68 Aurora is an exploded 65% keyboard manufactured by Wuque
         Studio and sold by CannonKeys. The Ikki68 Aurora features an area for a
         badge as an accent piece. Additionally, this area is magnetic in order
-        to remove and insert badges efficiently.
+        to remove and insert badges effortlessly.
       </p>
       <p>
         A standard 65% keyboard features the arrow keys and omits the function
