added cert and clunker imgs

--- a/clunker.html
+++ b/clunker.html
@@ -106,7 +106,7 @@
       </h1>
       <p class="section__subtitle section__subtitle--intro">Through-hole 40%</p>
       <img
-        src="imgs/"
+        src="imgs/keyboards/clunker/clunker_susu_right_sq.jpg"
         alt="A close-up picture of the Clunker"
         class="intro__img"
       />
@@ -183,7 +183,7 @@
           <div class="gallery__img">
             <img
               class="grid__image"
-              src="imgs/keyboards/testing/test_sq1.png"
+              src="imgs/keyboards/clunker/clunker_whale_dark_front_cropped.jpg"
               alt="A picture of the Clunker keyboard"
             />
           </div>
@@ -193,7 +193,7 @@
           <div class="gallery__img">
             <img
               class="grid__image"
-              src="imgs/keyboards/testing/test_sq1.png"
+              src="imgs/keyboards/clunker/clunker_susu_front_cropped.jpg"
               alt="A picture of the Clunker keyboard"
             />
           </div>
@@ -203,7 +203,7 @@
           <div class="gallery__img">
             <img
               class="grid__image"
-              src="imgs/keyboards/testing/test_sq1.png"
+              src="imgs/keyboards/clunker/clunker_susu_left_sq.jpg"
               alt="A picture of the Clunker keyboard"
             />
           </div>
@@ -213,7 +213,7 @@
           <div class="gallery__img">
             <img
               class="grid__image"
-              src="imgs/keyboards/testing/test_rect2.png"
+              src="imgs/keyboards/clunker/clunker_bow_right_sq.jpg"
               alt="A picture of the Clunker keyboard"
             />
           </div>
@@ -223,7 +223,7 @@
           <div class="gallery__img">
             <img
               class="grid__image"
-              src="imgs/keyboards/testing/test_sq2.png"
+              src="imgs/keyboards/clunker/clunker_bow_front_cropped.jpg"
               alt="A picture of the Clunker keyboard"
             />
           </div>
@@ -233,7 +233,7 @@
           <div class="gallery__img">
             <img
               class="grid__image"
-              src="imgs/keyboards/testing/test_sq3.png"
+              src="imgs/keyboards/clunker/clunker_whale_top_sq.jpg"
               alt="A picture of the Clunker keyboard"
             />
           </div>
@@ -243,7 +243,7 @@
           <div class="gallery__img">
             <img
               class="grid__image"
-              src="imgs/keyboards/testing/test_sq3.png"
+              src="imgs/keyboards/clunker/clunker_susu_top_sq.jpg"
               alt="A picture of the Clunker keyboard"
             />
           </div>
@@ -253,27 +253,7 @@
           <div class="gallery__img">
             <img
               class="grid__image"
-              src="imgs/keyboards/testing/test_sq3.png"
-              alt="A picture of the Clunker keyboard"
-            />
-          </div>
-        </div>
-        <!-- keyboard item 9 -->
-        <div class="clunker-item-9">
-          <div class="gallery__img">
-            <img
-              class="grid__image"
-              src="imgs/keyboards/testing/test_sq4.png"
-              alt="A picture of the Clunker keyboard"
-            />
-          </div>
-        </div>
-        <!-- keyboard item 10 -->
-        <div class="clunker-item-10">
-          <div class="gallery__img">
-            <img
-              class="grid__image"
-              src="imgs/keyboards/testing/test_rect4.png"
+              src="imgs/keyboards/clunker/clunker_bow_top_sq.jpg"
               alt="A picture of the Clunker keyboard"
             />
           </div>
