--- a/index.html
+++ b/index.html
@@ -186,6 +186,24 @@
               web development and machine learning.
             </p>
           </li>
+          <li>
+            <b>Jul 2022 - Sep 2022: </b> Stepik Bootcamp:
+            <i>Course Certificate with Distinction</i>
+            <p>
+              Completed the Stepik course, "Ace Your Next Coding Interview by
+              Learning Algorithms", led by fellow UCSD researchers Alexander
+              Kulikov and Pavel Pevzner and recommended to me by UCSD professor
+              Niema Moshiri. The course provides insight on how to use greedy,
+              divide and conquer, and dynamic programming strategies to solve
+              various programming problems.
+              <a
+                href="https://drive.google.com/file/d/1I4ehpbrsVicml8wUs6N4Y_8YZz0XByrq/view?usp=sharing"
+                target="_blank"
+                >Here</a
+              >
+              is the link to my certificate.
+            </p>
+          </li>
         </ol>
       </div>
       <img
@@ -306,10 +324,10 @@
           </div>
           <!-- keyboard item 6 -->
           <div class="grid-item grid-item-6">
-            <a href="index.html#keyboards" class="grid__link">
+            <a href="clunker.html" class="grid__link">
               <img
                 class="grid__image"
-                src="imgs/keyboards/thumbnails/coming_soon_sq_gray.png"
+                src="imgs/keyboards/thumbnails/clunker_thumbnail.jpg"
                 alt="A picture of the Clunker keyboard"
               />
               <div class="grid__overlay">
