--- a/sat75.html
+++ b/sat75.html
@@ -330,7 +330,7 @@
             <div class="gallery__img">
               <img
                 class="grid__image"
-                src="imgs/keyboards/satisfaction75/sat75_modo.jpg"
+                src="imgs/keyboards/satisfaction75/sat75_wob_left_cropped.jpg"
                 alt="A picture of the Satisfaction 75 keyboard"
               />
             </div>
@@ -340,7 +340,7 @@
             <div class="gallery__img">
               <img
                 class="grid__image"
-                src="imgs/keyboards/satisfaction75/sat75_susu.jpg"
+                src="imgs/keyboards/satisfaction75/sat75_wob_right_sq.jpg"
                 alt="A picture of the Satisfaction 75 keyboard"
               />
             </div>
@@ -350,7 +350,27 @@
             <div class="gallery__img">
               <img
                 class="grid__image"
-                src="imgs/keyboards/satisfaction75/sat75_sc_top.jpg"
+                src="imgs/keyboards/satisfaction75/sat75_wob_front.jpg"
+                alt="A picture of the Satisfaction 75 keyboard"
+              />
+            </div>
+          </div>
+          <!-- keyboard item 4 -->
+          <div class="sat75-item-4">
+            <div class="gallery__img">
+              <img
+                class="grid__image"
+                src="imgs/keyboards/satisfaction75/sat75_sc_right_side_cropped.jpg"
+                alt="A picture of the Satisfaction 75 keyboard"
+              />
+            </div>
+          </div>
+          <!-- keyboard item 5 -->
+          <div class="sat75-item-5">
+            <div class="gallery__img">
+              <img
+                class="grid__image"
+                src="imgs/keyboards/satisfaction75/sat75_sc_top_right_half.jpg"
                 alt="A picture of the Satisfaction 75 keyboard"
               />
             </div>
